Fix CMakeLists.txt bug

--- a/concert/android/build.gradle
+++ b/concert/android/build.gradle
@@ -67,6 +67,12 @@ android {
     }
 
     defaultConfig {
+        externalNativeBuild {
+            cmake {
+                arguments '-DTARGET_PLATFORM=android'
+            }
+        }
+
         ndk {
             abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
         }
