--- a/concert/native/concert/CMakeLists.txt
+++ b/concert/native/concert/CMakeLists.txt
@@ -8,26 +8,24 @@ if (MSVC)
     set(CMAKE_CXX_FLAGS "/utf-8")
 endif ()
 
-option(CRYPTOPP_INSTALL "CRYPTOPP_INSTALL" OFF)
-
 add_subdirectory(third_party/otthat_bit7z)
 add_subdirectory(third_party/otthat_cryptopp-cmake)
 
-add_library(concert SHARED)
+add_library(${PROJECT_NAME} SHARED)
 
 file(GLOB_RECURSE src CONFIGURE_DEPENDS src/*.cpp include/*.h)
-target_sources(concert PRIVATE ${src})
-target_include_directories(concert PRIVATE "include")
+target_sources(${PROJECT_NAME} PRIVATE ${src})
+target_include_directories(${PROJECT_NAME} PRIVATE "include")
 
-target_link_libraries(concert PRIVATE bit7z)
-target_link_libraries(concert PRIVATE cryptopp)
+target_link_libraries(${PROJECT_NAME} PRIVATE bit7z)
+target_link_libraries(${PROJECT_NAME} PRIVATE cryptopp)
 
-if (ANDROID)
-    target_link_libraries(concert PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/libs/android/${ANDROID_ABI}/lib7z.so")
+if (TARGET_PLATFORM STREQUAL "android")
+    target_link_libraries(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/libs/android/${ANDROID_ABI}/lib7z.so")
 endif ()
 
 # 如果是windows, 则安装 concert.dll & 7z.dll 到 flutter windows 产出目录
-if (WIN32)
+if (TARGET_PLATFORM STREQUAL "windows")
     set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/$<$<CONFIG:DEBUG>:Debug>$<$<CONFIG:RELEASE>:Release>")
     install(FILES "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/concert.dll" DESTINATION "${INSTALL_BUNDLE_LIB_DIR}" COMPONENT Runtime)
     install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/libs/windows/x86_64/7z.dll" DESTINATION "${INSTALL_BUNDLE_LIB_DIR}" COMPONENT Runtime)
