--- a/shine/pubspec.yaml
+++ b/shine/pubspec.yaml
@@ -30,27 +30,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  
   concert:
     path: ../concert
+  
+  cupertino_icons: ^1.0.2
   ffi: ^2.1.2
   path_provider: ^2.1.2
   path: ^1.9.0
+  get: ^4.6.6
+  adaptive_dialog: ^2.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  import_sorter: ^4.6.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
