Complete the home page

--- a/concert/native/concert/CMakeLists.txt
+++ b/concert/native/concert/CMakeLists.txt
@@ -10,6 +10,7 @@ endif ()
 
 add_subdirectory(third_party/otthat_bit7z)
 add_subdirectory(third_party/otthat_cryptopp-cmake)
+add_subdirectory(third_party/otthat_libsodium)
 
 add_library(${PROJECT_NAME} SHARED)
 
@@ -19,6 +20,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE "include")
 
 target_link_libraries(${PROJECT_NAME} PRIVATE bit7z)
 target_link_libraries(${PROJECT_NAME} PRIVATE cryptopp)
+target_link_libraries(${PROJECT_NAME} PRIVATE libsodium)
 
 if (TARGET_PLATFORM STREQUAL "android")
     target_link_libraries(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/libs/android/${ANDROID_ABI}/lib7z.so")
@@ -41,5 +43,6 @@ if (TARGET_PLATFORM STREQUAL "test")
         target_include_directories("test-${name}" PRIVATE "include")
         target_link_libraries("test-${name}" PRIVATE bit7z)
         target_link_libraries("test-${name}" PRIVATE cryptopp)
+        target_link_libraries("test-${name}" PRIVATE libsodium)
     endforeach ()
 endif ()
