--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "concert/native/concert/third_party/otthat_cryptopp-cmake"]
 	path = concert/native/concert/third_party/otthat_cryptopp-cmake
 	url = https://github.com/Otthat-Shine/otthat_cryptopp-cmake.git
+[submodule "concert/native/concert/third_party/otthat_libsodium"]
+	path = concert/native/concert/third_party/otthat_libsodium
+	url = https://github.com/Otthat-Shine/otthat_libsodium.git
