--- a/concert/pubspec.yaml
+++ b/concert/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
