--- a/shine/pubspec.yaml
+++ b/shine/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   open_file_manager: ^1.0.2
   flutter_easyloading: ^3.0.5
   filesaverz: ^3.2.1
+  video_player: ^2.8.6
+  video_player_win: ^2.3.7
+  video_player_control_panel: ^1.1.1
 
 dev_dependencies:
   flutter_test:
