--- a/concert/android/build.gradle
+++ b/concert/android/build.gradle
@@ -1,4 +1,4 @@
-group 'art.execve.concert'
+group 'cn.otthat.concert'
 version '1.0-SNAPSHOT'
 
 buildscript {
@@ -26,7 +26,7 @@ apply plugin: 'kotlin-android'
 
 android {
     if (project.android.hasProperty("namespace")) {
-        namespace 'art.execve.concert'
+        namespace 'cn.otthat.concert'
     }
 
     compileSdkVersion 33
