--- a/concert/android/src/main/AndroidManifest.xml
+++ b/concert/android/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="art.execve.concert">
+  package="cn.otthat.concert">
 </manifest>
