--- a/concert/pubspec.yaml
+++ b/concert/pubspec.yaml
@@ -38,7 +38,7 @@ flutter:
   plugin:
     platforms:
       android:
-        package: art.execve.concert
+        package: cn.otthat.concert
         pluginClass: ConcertPlugin
       windows:
         pluginClass: ConcertPluginCApi
